Working on better parsing