@@ -10,7 +10,7 @@
 
     <properties>
         <!-- Adjust your java version here -->
-        <java.version>14</java.version>
+        <java.version>15</java.version>
 		<!-- Adjust the path to the class that contains the main-method, that is to be executed, here -->
 		<path.to.main>de.hub.mse.variantsync.variantdrift.experiments.ExperimentRunner</path.to.main>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,8 +27,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
